# ethereum-proxy-etl

./: README.md  pyproject.toml
ethereum_proxy_etl/: backfill_snowflake.py  db.py  detect.py  env.py  insert.py  stream.py  update.py
tests/: test_1.py  test_2.py
